# gqlmod

./: .cirrus.yml  .gitignore  .readthedocs.yml  README.md  setup.cfg  setup.py
.ci/: upload.xsh
docs/: cli.rst  conf.py  index.rst  provider.rst  requirements.txt  usage.rst
gqlmod/: __init__.py  _mod_impl.py  cli.py  enable.py  errors.py  importer.py  providers.py
gqlmod/helpers/: __init__.py  aiohttp.py  debug.py  httpx.py  requests.py  types.py  urllib.py  utils.py
gqlmod_starwars/: __init__.py  data.py  schema.py
testmod/: __init__.py  __main__.py  queries.gql  queries_empty.gql  queries_errors.gql
tests/: test_gql.py  test_providers.py
