[metadata]
name = gqlmod
version = 0.1.0
author = Jamie Bliss
author_email = jamie@ivyleav.es
description = GraphQL Query Modules
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/gobuildit/gqlmod
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.7

install_requires =
    graphql-core>=3.0a0
    import-x
    astor
    setuptools

setup_requires =
    wheel

tests_require =
     pytest

[options.packages.find]
exclude=testmod

[options.extras_require]
requests =
    requests

aiohttp =
    aiohttp

[options.entry_points]
graphql_providers =
    starwars = gqlmod_starwars:StarWarsProvider

[flake8]
select = C,E,F,W,B,B9
ignore = E221
max-complexity = 7
max-line-length = 85
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    venv
