[metadata]
name = gqlmod
author = Jamie Bliss
author_email = jamie@ivyleav.es
description = GraphQL Query Modules
long_description = file: README.md
long_description_content_type=text/markdown
project_urls =
    Tip Jar = https://ko-fi.com/astraluma
    Source Code = https://github.com/gqlmod/gqlmod
    Documentation = https://gqlmod.readthedocs.io/
license = LGPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.7

install_requires =
    graphql-core~=3.1.0
    import-x
    importlib-metadata; python_version < "3.8"
    click

setup_requires =
    wheel
    setuptools_scm

tests_require =
     pytest

[options.packages.find]
exclude=testmod

[options.extras_require]
aiohttp =
    aiohttp

[options.entry_points]
graphql_providers =
    starwars = gqlmod_starwars:StarWarsProvider

console_scripts =
    gqlmod = gqlmod.cli:cli

[flake8]
select = C,E,F,W,B,B9
ignore = E221
max-complexity = 7
max-line-length = 999
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    docs
